--- a/pom.xml
+++ b/pom.xml
@@ -8,12 +8,12 @@
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-core</artifactId>
-			<version>0.7.0</version>
+			<version>0.8.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>io.dropwizard</groupId>
 			<artifactId>dropwizard-assets</artifactId>
-			<version>0.7.0</version>
+			<version>0.8.0-rc1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.mongodb.morphia</groupId>
